add eslint and prettier
