# src/app/docs/openapi.yaml
@@ -6,21 +6,21 @@ info:
   termsOfService: http://localhost
 
   license:
-    name: "MIT"
+    name: 'MIT'
     url: http://localhost
-servers: 
+servers:
   - url: http://localhost:{port}/{basePath}
     description: Development Server
     variables:
       port:
         enum:
-          - "7000"
-        default: "7000"
+          - '7000'
+        default: '7000'
       basePath:
         default: api/v1
 tags:
   - name: Auth
-    description: "Token de acesso"
+    description: 'Token de acesso'
 
 paths:
   # Auth #
@@ -53,13 +53,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/errorResponse"
+                $ref: '#/components/schemas/errorResponse'
         500:
           description: INTERNAL_SERVER_ERROR
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/errorResponse"
+                $ref: '#/components/schemas/errorResponse'
 
   # Routes #
 
@@ -88,19 +88,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/modelUser"
+                $ref: '#/components/schemas/modelUser'
         401:
           description: UNAUTHORIZED
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/errorResponse"
+                $ref: '#/components/schemas/errorResponse'
         500:
           description: INTERNAL_SERVER_ERROR
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/errorResponse"
+                $ref: '#/components/schemas/errorResponse'
   /user/normalUser:
     post:
       tags:
@@ -126,19 +126,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/normalUser"
+                $ref: '#/components/schemas/normalUser'
         401:
           description: UNAUTHORIZED
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/errorResponse"
+                $ref: '#/components/schemas/errorResponse'
         500:
           description: INTERNAL_SERVER_ERROR
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/errorResponse"
+                $ref: '#/components/schemas/errorResponse'
   #   put:
   #     security:
   #       - BearerAuth: []
@@ -210,8 +210,8 @@ paths:
   #         content:
   #           application/json:
   #             schema:
-  #               $ref: "#/components/schemas/errorResponse"            
-  
+  #               $ref: "#/components/schemas/errorResponse"
+
   # #getproduct route#
   # /product/{productName}:
   #   get:
@@ -226,7 +226,7 @@ paths:
   #         name: productName
   #         required: true
   #         schema:
-  #           type: string  
+  #           type: string
   #     responses:
   #       200:
   #         description: OK
@@ -235,13 +235,13 @@ paths:
   #             schema:
   #               type: array
   #               items:
-  #                 $ref: "#/components/schemas/apiResponse" 
+  #                 $ref: "#/components/schemas/apiResponse"
   #       500:
   #         description: INTERNAL_SERVER_ERROR
   #         content:
   #           application/json:
   #             schema:
-  #               $ref: "#/components/schemas/errorResponse" 
+  #               $ref: "#/components/schemas/errorResponse"
 components:
   securitySchemes:
     ApiKeyAuth:
